--- a/my-web.mc/Layout/NavMenu.razor
+++ b/my-web.mc/Layout/NavMenu.razor
@@ -20,10 +20,10 @@
 @code {
     record Link(string Href, string Label);
     Link[] Links = [
-        new("/", "Home"),
-        new("/projects", "Projects"),
-        new("/blogs", "Blogs"),
-        new("/my-hometown", "My Hometown"),
+        new("", "Home"),
+        new("projects", "Projects"),
+        new("blogs", "Blogs"),
+        new("my-hometown", "My Hometown"),
     ];
 
     private bool collapseNavMenu = true;
