--- a/my-web.mc/Components/Profile.razor.css
+++ b/my-web.mc/Components/Profile.razor.css
@@ -4,7 +4,7 @@
     border-radius: 50%;
     scale: .9;
     transform-origin: center;
-    background: url('/images/profile_img.png');
+    background: url('images/profile_img.png');
     background-size: cover;
     background-position-x: 50%;
     background-position-y: 20%;
