Fixed the last link

--- a/my-web.mc/Components/ProjectsHero.razor
+++ b/my-web.mc/Components/ProjectsHero.razor
@@ -16,7 +16,7 @@
             Transforming opportunities into meticulously crafted, purpose-driven applications.
         </p>
         </div>
-            <NavLink href="/projects" class="md:text-xl text-sm
+            <NavLink href="projects" class="md:text-xl text-sm
                 uppercase mt-10 bg-[var(--accent)] w-fit py-3 px-8 font-semibold
                 hover:bg-[var(--accent-bold)] transition-colors">
             Explore Projects
