--- a/my-web.mc/wwwroot/css/app.css
+++ b/my-web.mc/wwwroot/css/app.css
@@ -598,6 +598,10 @@ video {
   margin: 1rem;
 }
 
+.m-\[auto\] {
+  margin: auto;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -676,6 +680,10 @@ video {
   height: 100%;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .h-\[40px\] {
   height: 40px;
 }
@@ -690,6 +698,10 @@ video {
 
 .w-\[100\%\] {
   width: 100%;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
 }
 
 .w-\[1em\] {
@@ -707,6 +719,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.max-w-\[600px\] {
+  max-width: 600px;
 }
 
 .max-w-\[800px\] {
@@ -779,6 +795,10 @@ video {
   justify-content: space-around;
 }
 
+.justify-stretch {
+  justify-content: stretch;
+}
+
 .justify-items-start {
   justify-items: start;
 }
@@ -827,6 +847,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -863,6 +887,11 @@ video {
 
 .bg-\[var\(--bg-dark\)\] {
   background-color: var(--bg-dark);
+}
+
+.bg-\[white\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
@@ -915,6 +944,11 @@ video {
   padding-right: 2rem;
 }
 
+.px-\[3em\] {
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -928,6 +962,11 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-\[40px\] {
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .pb-6 {
@@ -972,6 +1011,10 @@ video {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
 }
 
 .text-lg {
@@ -1020,6 +1063,11 @@ video {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.text-\[black\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .text-\[var\(--accent-bold\)\] {
@@ -1115,8 +1163,9 @@ h1 {
   outline: 0;
 }
 
-html {
+html, body {
   font-size: 12px;
+  overflow-x:hidden;
 }
 
 .svg-fill {
@@ -1291,6 +1340,38 @@ body {
   top: 0.5rem;
 }
 
+.hover-highlight .shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(222, 47%, 7%, 0.8);
+  transition: opacity 0.5s;
+  opacity: .4;
+  z-index: 200;
+}
+
+.hover-highlight > div {
+  transition: ease-in-out .2s scale;
+}
+
+.hover-highlight:hover > div {
+  scale: .8;
+}
+
+.hover-highlight:hover > div .shade {
+  opacity: .8;
+}
+
+.hover-highlight > div:hover {
+  scale: 1.2;
+}
+
+.hover-highlight > div:hover .shade {
+  opacity: 0;
+}
+
 .hover\:scale-125:hover {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -1329,6 +1410,10 @@ body {
     margin-top: 5rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:grid {
     display: grid;
   }
@@ -1339,6 +1424,10 @@ body {
 
   .md\:auto-rows-max {
     grid-auto-rows: max-content;
+  }
+
+  .md\:text-\[16px\] {
+    font-size: 16px;
   }
 
   .md\:text-xl {
@@ -1376,6 +1465,10 @@ body {
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:text-\[18px\] {
+    font-size: 18px;
   }
 
   .lg\:text-lg {
@@ -1433,6 +1526,10 @@ body {
   color: var(--text-link);
 }
 
+.\[\&\>label\]\:grid>label {
+  display: grid;
+}
+
 .\[\&\>ol\]\:list-decimal>ol {
   list-style-type: decimal;
 }
@@ -1465,3 +1562,4 @@ body {
 .\[\&_li\]\:leading-8 li {
   line-height: 2rem;
 }
+
